--- a/themes/ag/layouts/partials/header.html
+++ b/themes/ag/layouts/partials/header.html
@@ -11,27 +11,35 @@
                     <a href="/" class="badge badge-white">Home</a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" class="badge badge-white">About</a>
+                    <a href="/about" class="badge badge-white">About</a>
                 </li>
                 <li class="list-inline-item">
                     <a href="/posts" class="badge badge-white">Posts</a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" class="badge badge-white">Categories</a>
+                    <a href="/categories" class="badge badge-white">Categories</a>
                 </li>
             </ul>
             <ul id="nav-social" class="list-inline">
                 <li class="list-inline-item mr-3">
-                    <i class="fab fa-github fa-1x text-muted"></i>
+                    <a href="https://github.com/austingebauer" target="_blank">
+                        <i class="fab fa-github fa-1x text-muted"></i>
+                    </a>
                 </li>
                 <li class="list-inline-item mr-3">
-                    <i class="fab fa-linkedin-in fa-1x text-muted"></i>
+                    <a href="https://www.linkedin.com/in/austingebauer" target="_blank">
+                        <i class="fab fa-linkedin-in fa-1x text-muted"></i>
+                    </a>
                 </li>
                 <li class="list-inline-item mr-3">
-                    <i class="fab fa-twitter fa-1x text-muted"></i>
+                    <a href="https://twitter.com/austingebauer" target="_blank">
+                        <i class="fab fa-twitter fa-1x text-muted"></i>
+                    </a>
                 </li>
                 <li class="list-inline-item mr-3">
-                    <i class="fas fa-at fa-1x text-muted"></i>
+                    <a href="mailto:gebauer.austin@gmail.com">
+                        <i class="fas fa-at fa-1x text-muted"></i>
+                    </a>
                 </li>
             </ul>
         </div>
