style: update page styles

--- a/themes/ag/layouts/partials/header.html
+++ b/themes/ag/layouts/partials/header.html
@@ -1,6 +1,6 @@
-<header class="container mt-5 mb-5 mt-xs-1">
+<header class="container mt-sm-5 mt-4 mb-4 mt-xs-1">
     <div class="row">
-        <div class="col-sm-4 col-12 text-sm-right text-center p-3 pt-4">
+        <div class="col-sm-4 col-12 text-sm-right text-center pt-3 pb-1 pt-sm-4">
             <img id="me" class="rounded-circle" src="/img/me.jpeg">
         </div>
         <div class="col-sm-8 col-12 text-sm-left text-center">
