--- a/themes/ag/layouts/index.html
+++ b/themes/ag/layouts/index.html
@@ -1,30 +1,17 @@
 {{ define "main" }}
-    <div id="home-list" class="container pl-sm-5 ml-sm-4">
+    <div class="container pl-sm-5 ml-sm-5">
         <div class="row">
-            {{ $recentposts := 10 }}
-            {{ if .Params.recentposts }}
-                {{ $recentposts = .Params.recentposts }}
-            {{ end }}
+            <div class="col-12">
+                {{ $recentposts := 10 }}
+                {{ if .Params.recentposts }}
+                    {{ $recentposts = .Params.recentposts }}
+                {{ end }}
 
-            {{/* Display recent posts*/}}
-            <div class="pb-3">
-                <h5><span class="badge category">Recent</span></h5>
-                <ul class="list-unstyled">
-                    {{ range first $recentposts (where .Pages "Type" "posts" ) }}
-                        <li>
-                            {{ .Date.Format "Jan 2 2006" }}
-                            <a href="{{ .URL }}">{{ .Title }}</a>
-                        </li>
-                    {{ end }}
-                </ul>
-            </div>
-
-            {{/* Display categories by count and their posts */}}
-            {{ range .Site.Taxonomies.categories.ByCount }}
+                {{/* Display recent posts*/}}
                 <div class="pb-3">
-                    <h5><span class="badge category">{{ humanize .Name }}</span></h5>
+                    <h5><span class="badge category">Recent</span></h5>
                     <ul class="list-unstyled">
-                        {{ range .Pages }}
+                        {{ range first $recentposts (where .Pages "Type" "posts" ) }}
                             <li>
                                 {{ .Date.Format "Jan 2 2006" }}
                                 <a href="{{ .URL }}">{{ .Title }}</a>
@@ -32,7 +19,22 @@
                         {{ end }}
                     </ul>
                 </div>
-            {{ end }}
+
+                {{/* Display categories by count and their posts */}}
+                {{ range .Site.Taxonomies.categories.ByCount }}
+                    <div class="pb-3">
+                        <h5><span class="badge category">{{ humanize .Name }}</span></h5>
+                        <ul class="list-unstyled">
+                            {{ range .Pages }}
+                                <li>
+                                    {{ .Date.Format "Jan 2 2006" }}
+                                    <a href="{{ .URL }}">{{ .Title }}</a>
+                                </li>
+                            {{ end }}
+                        </ul>
+                    </div>
+                {{ end }}
+            </div>
         </div>
     </div>
 {{ end }}
