feat: adds about me as home page; style: fixes up alignment for each page

--- a/themes/ag/layouts/_default/baseof.html
+++ b/themes/ag/layouts/_default/baseof.html
@@ -4,7 +4,9 @@
     <body>
         <div id="content" class="mx-auto">
             {{- partial "header.html" . -}}
-            {{- block "main" . }}{{- end }}
+            <div class="container pt-2">
+                {{- block "main" . }}{{- end }}
+            </div>
             {{- partial "footer.html" . -}}
         </div>
     </body>
