--- a/themes/ag/layouts/_default/list.html
+++ b/themes/ag/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="container">
+    <div class="pl-sm-4 ml-sm-5">
         <ul>
         {{ range .Pages }}
             <li>
