--- a/themes/ag/layouts/_default/single.html
+++ b/themes/ag/layouts/_default/single.html
@@ -1,7 +1,5 @@
 {{ define "main" }}
-    <div class="container">
-        <article>
-            {{ .Content }}
-        </article>
+    <div class="pl-sm-4 ml-sm-5">
+        {{ .Content }}
     </div>
 {{ end }}
