--- a/themes/ag/layouts/partials/header.html
+++ b/themes/ag/layouts/partials/header.html
@@ -8,11 +8,11 @@
             <p class="text-muted mb-1">Software Engineer | NGINX | Seattle, WA</p>
             <ul id="nav-links" class="list-inline mb-2">
                 <li class="list-inline-item">
-                    <a href="/" class="badge badge-white">Home</a>
+                    <a href="/" class="badge badge-white">About</a>
                 </li>
-                <li class="list-inline-item">
-                    <a href="/about" class="badge badge-white">About</a>
-                </li>
+                {{/*<li class="list-inline-item">*/}}
+                    {{/*<a href="/about" class="badge badge-white">About</a>*/}}
+                {{/*</li>*/}}
                 <li class="list-inline-item">
                     <a href="/posts" class="badge badge-white">Posts</a>
                 </li>
