--- a/themes/ag/layouts/posts/single.html
+++ b/themes/ag/layouts/posts/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="container">
+    <div class="pl-sm-2">
         <div class="row">
             <div class="col-12 col-sm-6 pb-2">
                 <a href="{{ .Permalink }}">Published {{ .Date.Format "January 2, 2006"  }}</a>
