style: update header styles on home page

--- a/themes/ag/layouts/_default/baseof.html
+++ b/themes/ag/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <body>
         <div id="content" class="mx-auto">
             {{- partial "header.html" . -}}
-            <div class="container pt-2">
+            <div class="container">
                 {{- block "main" . }}{{- end }}
             </div>
             {{- partial "footer.html" . -}}
