--- a/themes/ag/layouts/index.html
+++ b/themes/ag/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="pl-sm-4 ml-sm-5">
+    <div id="index-content" class="pl-sm-4 ml-sm-5">
         {{ .Content }}
     </div>
 
