--- a/themes/ag/layouts/posts/list.html
+++ b/themes/ag/layouts/posts/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="pl-sm-4 ml-sm-5">
+    <div class="pl-sm-4 ml-sm-5 pt-2">
         <div class="row">
             <div class="col-12">
                 {{ $recentposts := 10 }}
