--- a/themes/ag/layouts/_default/list.html
+++ b/themes/ag/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="pl-sm-4 ml-sm-5">
+    <div class="pl-sm-4 ml-sm-5 pt-2">
         <ul>
         {{ range .Pages }}
             <li>
