docs: start ray tracing post

--- a/themes/ag/layouts/_default/baseof.html
+++ b/themes/ag/layouts/_default/baseof.html
@@ -10,5 +10,6 @@
             {{- partial "footer.html" . -}}
         </div>
     </body>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<!--    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML"></script>-->
 </html>
