--- a/themes/ag/layouts/partials/head.html
+++ b/themes/ag/layouts/partials/head.html
@@ -3,7 +3,5 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/css/theme.css"/>
-    {{ range .AlternativeOutputFormats -}}
-        {{ printf `<link rel="%s" type="%s+%s" href="%s" title="%s" />` .Rel .MediaType.Type .MediaType.Suffix .Permalink $.Site.Title | safeHTML }}
-    {{ end -}}
+    {{ template "_internal/google_analytics.html" . }}
 </head>
