feat: parameterize theme in many ways

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,42 +3,5 @@
         {{ .Content }}
     </div>
 
-    {{/*<div class="container pl-sm-5 ml-sm-5">*/}}
-        {{/*<div class="row">*/}}
-            {{/*<div class="col-12">*/}}
-                {{/*{{ $recentposts := 10 }}*/}}
-                {{/*{{ if .Params.recentposts }}*/}}
-                    {{/*{{ $recentposts = .Params.recentposts }}*/}}
-                {{/*{{ end }}*/}}
-
-                 {{/*Display recent posts*/}}
-                {{/*<div class="pb-3">*/}}
-                    {{/*<h5><span class="badge category">Recent</span></h5>*/}}
-                    {{/*<ul class="list-unstyled">*/}}
-                        {{/*{{ range first $recentposts (where .Pages "Type" "posts" ) }}*/}}
-                            {{/*<li>*/}}
-                                {{/*{{ .Date.Format "Jan 2 2006" }}*/}}
-                                {{/*<a href="{{ .URL }}">{{ .Title }}</a>*/}}
-                            {{/*</li>*/}}
-                        {{/*{{ end }}*/}}
-                    {{/*</ul>*/}}
-                {{/*</div>*/}}
-
-                 {{/*Display categories by count and their posts */}}
-                {{/*{{ range .Site.Taxonomies.categories.ByCount }}*/}}
-                    {{/*<div class="pb-3">*/}}
-                        {{/*<h5><span class="badge category">{{ humanize .Name }}</span></h5>*/}}
-                        {{/*<ul class="list-unstyled">*/}}
-                            {{/*{{ range .Pages }}*/}}
-                                {{/*<li>*/}}
-                                    {{/*{{ .Date.Format "Jan 2 2006" }}*/}}
-                                    {{/*<a href="{{ .URL }}">{{ .Title }}</a>*/}}
-                                {{/*</li>*/}}
-                            {{/*{{ end }}*/}}
-                        {{/*</ul>*/}}
-                    {{/*</div>*/}}
-                {{/*{{ end }}*/}}
-            {{/*</div>*/}}
-        {{/*</div>*/}}
-    {{/*</div>*/}}
+    {{- partial "category-posts.html" . -}}
 {{ end }}
