--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,5 @@
-<footer class="m-5"></footer>
+<footer class="text-center">
+    <small class="text-muted">
+        &copy; Copyright {{ now.Format "2006"}}, Austin Gebauer
+    </small>
+</footer>
