--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,38 +1,3 @@
 {{ define "main" }}
-    <div class="pl-sm-4 ml-sm-5 pt-2">
-        <div class="row">
-            <div class="col-12">
-                {{ $recentposts := 10 }}
-                {{ if .Params.recentposts }}
-                    {{ $recentposts = .Params.recentposts }}
-                {{ end }}
-
-                <div class="pb-3">
-                    <h5><span class="badge category">Recent</span></h5>
-                    <ul class="list-unstyled">
-                        {{ range first $recentposts (where .Pages "Type" "posts" ) }}
-                            <li>
-                                {{ .Date.Format "Jan 2 2006" }}
-                                <a href="{{ .URL }}">{{ .Title }}</a>
-                            </li>
-                        {{ end }}
-                    </ul>
-                </div>
-
-                {{ range .Site.Taxonomies.categories.ByCount }}
-                    <div class="pb-3">
-                        <h5><span class="badge category">{{ humanize .Name }}</span></h5>
-                        <ul class="list-unstyled">
-                            {{ range .Pages }}
-                                <li>
-                                    {{ .Date.Format "Jan 2 2006" }}
-                                    <a href="{{ .URL }}">{{ .Title }}</a>
-                                </li>
-                            {{ end }}
-                        </ul>
-                    </div>
-                {{ end }}
-            </div>
-        </div>
-    </div>
+    {{- partial "category-posts.html" . -}}
 {{ end }}
