--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,20 +1,12 @@
 {{ define "main" }}
     <div class="pl-sm-2">
-        <div class="row">
-            <div class="col-12 col-sm-6 pb-2">
-                <a href="{{ .Permalink }}">Published {{ .Date.Format "January 2, 2006"  }}</a>
-            </div>
-            <div class="col-12 col-sm-6 pb-2">
-                {{ range .Params.tags }}
-                    <small><a href="{{ "/tags/" | relURL }}{{ . | urlize }}">#{{ . }}</a></small>
-                {{ end }}
-            </div>
-        </div>
-
-        <h3>{{ .Title }}</h3>
-        {{ if .Params.Subtitle }}
+        <div class="mb-3">
+            <h3 class="mb-0">{{ .Title }}</h3>
+            {{ if .Params.Subtitle }}
             <h5>{{ .Params.Subtitle }}</h5>
-        {{ end }}
+            {{ end }}
+            <small>Published {{ .Date.Format "January 2, 2006"  }}</small>
+        </div>
 
         <article>
             {{ .Content }}
