feat: change date color

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -5,7 +5,7 @@
             {{ if .Params.Subtitle }}
             <h5>{{ .Params.Subtitle }}</h5>
             {{ end }}
-            <small>Published {{ .Date.Format "January 2, 2006"  }}</small>
+            <small class="text-muted">Published {{ .Date.Format "January 2, 2006"  }}</small>
         </div>
 
         <article>
