feat: updates theme styles and fixes colors

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,12 +2,13 @@
     <div class="row">
         <div class="col-sm-4 col-12 text-sm-right text-center pt-sm-4">
             <a href="/" class="text-decoration-none">
-                <img id="home-image" class="rounded-circle" src="{{ .Site.Params.home_image }}" />
+                <img id="home-image" class="rounded-circle"
+                     src="{{ .Site.Params.home_image }}" />
             </a>
         </div>
         <div class="col-sm-8 col-12 text-sm-left text-center">
             <h2 class="m-0 mb-2 mt-4">
-                <a href="/" class="text-decoration-none text-dark">
+                <a href="/" class="text-decoration-none">
                     {{ .Site.Params.header_title }}
                 </a>
             </h2>
