--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,12 +1,14 @@
 {{ define "main" }}
-    <div class="pl-sm-4 ml-sm-5 pt-2">
-        <ul>
+    <div class="pl-sm-4 ml-sm-5">
+        <ul class="list-unstyled">
         {{ range .Pages }}
             <li>
                 <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
-                    {{ .Date.Format "Jan 2, 2006" }}
+                    {{ .Date.Format "Jan 2 2006" }}
                 </time>
-                <a href="{{ .URL | relURL }}">{{ if .Draft }}DRAFT: {{end}}{{ .Title }}</a>
+                <a href="{{ .URL | relURL }}">
+                    {{ if .Draft }}DRAFT: {{end}}{{ .Title }}
+                </a>
             </li>
         {{ end }}
         </ul>
