feat: adds link to theme from footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,6 @@
 <footer class="text-center pb-1">
     <small class="text-muted">
-        {{ .Site.Params.footer_text | safeHTML }}
+        {{ .Site.Params.footer_text | safeHTML }}<br>
+        Powered by <a href="https://github.com/austingebauer/devise" target="_blank">Devise</a>
     </small>
 </footer>
