feat: parameterizes nav social icons and links into hugo config.toml

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,28 +23,14 @@
                     </li>
                 {{ end }}
             </ul>
-            <!-- TODO: parameterize these icons and links-->
             <ul id="nav-social" class="list-inline">
-                <li class="list-inline-item mr-3">
-                    <a href="https://github.com/austingebauer" target="_blank">
-                        <i class="fab fa-github fa-1x text-muted"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item mr-3">
-                    <a href="https://www.linkedin.com/in/austingebauer" target="_blank">
-                        <i class="fab fa-linkedin-in fa-1x text-muted"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item mr-3">
-                    <a href="https://twitter.com/austingebauer" target="_blank">
-                        <i class="fab fa-twitter fa-1x text-muted"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item mr-3">
-                    <a href="mailto:gebauer.austin@gmail.com">
-                        <i class="fas fa-at fa-1x text-muted"></i>
-                    </a>
-                </li>
+                {{ range .Site.Params.social }}
+                    <li class="list-inline-item mr-3">
+                        <a href="{{ .href }}" target="_blank">
+                            <i class="{{ .fa_icon }} text-muted"></i>
+                        </a>
+                    </li>
+                {{ end }}
             </ul>
         </div>
     </div>
