feat: adds default image for index page; feat: minify build

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,12 @@
         <div class="col-sm-4 col-12 text-sm-right text-center pt-sm-4">
             <a href="/" class="text-decoration-none">
                 <img id="home-image" class="rounded-circle"
-                     src="{{ .Site.Params.home_image }}" />
+                 {{ if (fileExists (printf "static/%s" (strings.TrimPrefix "/" .Site.Params.home_image))) }}
+                     src="{{ .Site.Params.home_image }}"
+                 {{ else }}
+                     src="https://cdn.clipart.email/83451492858686fbb12fdf8df0957c94_lil-silhouettes-by-lil-squid_481-512.png"
+                 {{ end }}
+                />
             </a>
         </div>
         <div class="col-sm-8 col-12 text-sm-left text-center">
