--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,11 @@
             <a href="/" class="text-decoration-none">
                 <img id="home-image" class="rounded-circle"
                  {{ if (fileExists (printf "static/%s" (strings.TrimPrefix "/" .Site.Params.home_image))) }}
-                     src="{{ .Site.Params.home_image }}"
+                    {{ if hasPrefix .Site.Params.home_image "/" }}
+                        src="{{ .Site.Params.home_image }}"
+                    {{ else }}
+                        src="{{ printf "/%s" .Site.Params.home_image }}"
+                    {{ end }}
                  {{ else }}
                      src="https://cdn.clipart.email/83451492858686fbb12fdf8df0957c94_lil-silhouettes-by-lil-squid_481-512.png"
                  {{ end }}
