--- a/layouts/partials/category-posts.html
+++ b/layouts/partials/category-posts.html
@@ -2,38 +2,37 @@
     <div class="row">
         <div class="col-12">
             {{ $recent := 7 }}
-            {{ if .Site.Params.recent_posts }}
+            {{ if isset .Site.Params "recent_posts" }}
                 {{ $recent = .Site.Params.recent_posts }}
             {{ end }}
-
             <div class="pb-3">
                 <h5><span class="badge category">Recent</span></h5>
                 <ul class="list-unstyled">
-                    {{ range first $recent (where .Site.RegularPages "Type" "posts" ) }}
-                    <li>
-                        {{ .Date.Format "Jan 2 2006" }}
-                        <a href="{{ .Permalink }}">{{ .Title }}</a>
-                    </li>
+                    {{ range first $recent (where .Site.RegularPages "Type" "in" site.Params.mainSections) }}
+                        <li>
+                            {{ .Date.Format "Jan 2 2006" }}
+                            <a href="{{ .Permalink }}">{{ .Title }}</a>
+                        </li>
                     {{ end }}
                 </ul>
             </div>
 
             {{ range $key, $taxonomy := .Site.Taxonomies.categories.Alphabetical }}
-            <div class="pb-3">
-                <h5>
+                <div class="pb-3">
+                    <h5>
                     <span class="badge category text-capitalize">
                         {{ .Name | humanize }}
                     </span>
-                </h5>
-                <ul class="list-unstyled">
-                    {{ range $taxonomy.Pages }}
-                    <li>
-                        {{ .Date.Format "Jan 2 2006" }}
-                        <a href="{{ .Permalink }}">{{ .Title }}</a>
-                    </li>
-                    {{ end }}
-                </ul>
-            </div>
+                    </h5>
+                    <ul class="list-unstyled">
+                        {{ range $taxonomy.Pages }}
+                            <li>
+                                {{ .Date.Format "Jan 2 2006" }}
+                                <a href="{{ .Permalink }}">{{ .Title }}</a>
+                            </li>
+                        {{ end }}
+                    </ul>
+                </div>
             {{ end }}
         </div>
     </div>
