feat: adds exampleSite

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,11 +1,12 @@
 <footer class="text-center pb-1">
     <small class="text-muted">
-        {{ if isset .Site.Params "footer_text" }}
-            {{ .Site.Params.footer_text | safeHTML }}
+        {{ if .Site.Copyright }}
+            {{ .Site.Copyright | safeHTML }}
         {{ else }}
             {{ "&copy; Copyright Year, Your Name" | safeHTML }}
         {{ end }}
         <br>
-        Powered by <a href="https://github.com/austingebauer/devise" target="_blank">Devise</a>
+        Powered by <a href="https://gohugo.io/" target="_blank">Hugo</a>
+        and <a href="https://github.com/austingebauer/devise" target="_blank">Devise</a>
     </small>
 </footer>
