feat: adds screenshots

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,7 +29,7 @@
                 {{ if isset .Site.Params "header_subtitle" }}
                     {{ .Site.Params.header_subtitle }}
                 {{ else }}
-                    Your Subtitle Text
+                    Your Creative Subtitle
                 {{ end }}
             </p>
             <ul id="nav-links" class="list-inline mb-2">
