feat: allow users to set custom home page content via content/_index.md

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,7 @@
 {{ define "main" }}
-    {{- partial "category-posts.html" . -}}
+    {{ if .Content }}
+        {{ .Content }}
+    {{ else }}
+        {{- partial "category-posts.html" . -}}
+    {{ end }}
 {{ end }}
