--- a/assets/sass/override.scss
+++ b/assets/sass/override.scss
@@ -1,16 +1,15 @@
-// === Import Bootstrap and variable overrides ===
+// === Import Bootstrap and set variable overrides ===
 $body-bg: {{ .Param "style.backgroundColor" }};
+$body-color: {{ .Param "style.fontColor" }};
 $font-family-base: "Helvetica Neue", Arial, sans-serif;
 $font-size-base: 0.95rem;
-
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 // === Import Font Awesome ===
-$fa-font-path: "./webfonts";
+$fa-font-path: "../webfonts";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss";
-
 .fa-1x {
   font-size: 0.9em !important;
 }
@@ -40,7 +39,7 @@ $fa-font-path: "./webfonts";
 }
 
 .category {
-  color: white;
+  color: $body-bg;
   background-color: $body-color;
 }
 
@@ -57,7 +56,6 @@ hr {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(51, 51, 51, 0.3), rgba(51, 51, 51, 0.4),
           rgba(51, 51, 51, 0.3), rgba(0, 0, 0, 0));
 }
-
 
 h1, h2 {
   letter-spacing: -0.085rem;
@@ -92,6 +90,27 @@ h4 {
 
 a {
   text-decoration: underline;
+}
+
+blockquote {
+  background: $body-bg;
+  border-left: 8px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+
+blockquote p {
+  display: inline;
 }
 
 // === Media breakpoints ===
