--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,12 +6,12 @@
     {{/* Adds complete override capability */}}
     {{ $overrideTemplate := resources.Get "sass/override.scss" }}
     {{ $override := $overrideTemplate | resources.ExecuteAsTemplate "css/theme.scss" . | toCSS | minify }}
-    <link rel="stylesheet" href="{{ $override.Permalink }}">
+    <link rel="stylesheet" href="{{ $override.RelPermalink }}">
 
     {{/* Adds custom styles capability */}}
     {{ $customTemplate := resources.Get "sass/custom.scss" }}
     {{ $custom := $customTemplate | resources.ExecuteAsTemplate "css/custom.scss" . | toCSS | minify }}
-    <link rel="stylesheet" href="{{ $custom.Permalink }}">
+    <link rel="stylesheet" href="{{ $custom.RelPermalink }}">
 
     {{ template "_internal/google_analytics.html" . }}
 </head>
