--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -6,14 +6,30 @@
 <article class="comments">
   <script
     data-isso="{{ .Site.Params.isso.data }}"
+    {{ if .Site.Params.isso.id }}
     data-isso-id="{{ .Site.Params.isso.id}}"
+    {{ end }}
+    {{ if .Site.Params.isso.css }}
     data-isso-css="{{ .Site.Params.isso.css }}"
+    {{ end}}
+    {{ if .Site.Params.isso.lang }}
     data-isso-lang="{{ .Site.Params.isso.lang }}"
+    {{ end }}
+    {{ if .Site.Params.isso.replyToSelf }}
     data-isso-reply-to-self="{{ .Site.Params.isso.replyToSelf }}"
+    {{ end }}
+    {{ if .Site.Params.isso.requireAuthor }}
     data-isso-require-author="{{ .Site.Params.isso.requireAuthor }}"
+    {{ end }}
+    {{ if .Site.Params.isso.requireEmail }}
     data-isso-require-email="{{ .Site.Params.isso.requireEmail }}"
+    {{ end }}
+    {{if .Site.Params.isso.avatar }}
     data-isso-avatar="{{ .Site.Params.isso.avatar }}"
+    {{ end }}
+    {{ if .Site.Params.isso.avararBg }}
     data-isso-avatar-bg="{{ .Site.Params.isso.avatarBg }}"
+    {{ end }}
     src="{{ .Site.Params.isso.jsLocation }}">
   </script>
   <noscript>Please enable JavaScript to view the comments powered by <a href="https://posativ.org/isso/">Isso</a>.</noscript>
