Combine page and site titles for pages with titles

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,7 @@
+{{ $page := . }}
+
 <head>
-    <title>{{ .Site.Title }}</title>
+    <title>{{ partial "title.html" $page }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="{{if .IsHome}}{{ $.Site.Params.description }}{{else}}{{.Description}}{{end}}" />
