Make info header expand to full width

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,7 +17,7 @@
             </a>
         </div>
         {{ end }}
-        <div class="col-sm-8 col-12 text-sm-left text-center">
+        <div class="col-sm-auto col-12 text-sm-left text-center">
             <h2 class="m-0 mb-2 mt-4">
                 <a href="/" class="text-decoration-none">
                     {{ if isset .Site.Params "header_title" }}
