Center header content if no home_image is used

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,8 +16,10 @@
                 />
             </a>
         </div>
+        <div class="col-sm-8 col-12 text-sm-left text-center">
+        {{ else }}
+        <div class="col-sm col-12 text-center">
         {{ end }}
-        <div class="col-sm col-12 text-sm-left text-center">
             <h2 class="m-0 mb-2 mt-4">
                 <a href="/" class="text-decoration-none">
                     {{ if isset .Site.Params "header_title" }}
