Polish used bootstrap classes

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,7 +18,7 @@
         </div>
         <div class="col-sm-8 col-12 text-sm-left text-center">
         {{ else }}
-        <div class="col-sm col-12 text-center">
+        <div class="col-12 text-center">
         {{ end }}
             <h2 class="m-0 mb-2 mt-4">
                 <a href="/" class="text-decoration-none">
