--- a/assets/sass/override.scss
+++ b/assets/sass/override.scss
@@ -20,6 +20,7 @@ $fa-font-path: "../webfonts";
   width: 100%;
   max-width: 650px;
   min-height: calc(100vh - 105px);
+  text-align: justify;
 }
 
 #home-image {
